# Codex-Responses-Bridge

./: .gitignore  Cargo.toml  README.md  README.zh-CN.md  ds.yaml
docs/: ARCHITECTURE.zh-CN.md
src/: config.rs  deepseek_web.rs  error.rs  main.rs  responses_store.rs  types.rs  ui.rs  upstream.rs
src/http/: mod.rs  routes.rs
src/protocol/: mod.rs
src/providers/: openai_compat.rs
src/providers/deepseek_web/: client.rs  mod.rs
src/wire/: chat.rs  messages.rs  mod.rs  responses.rs
