[package]
name = "model-toolcall-adapter-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[workspace]

[dependencies]
anyhow = "1"
aeon-claw-api = { path = "../crates/aeon-claw-api" }
async-trait = "0.1"
axum = "0.7"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-webpki-roots"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4"] }
wreq = "=6.0.0-rc.28"
wreq-util = "=3.0.0-rc.10"

[dev-dependencies]
pretty_assertions = "1"

[lints.rust]
unsafe_code = "forbid"
